# drift

./: .gitignore  CMakeLists.txt
cmake/: FindMongoDB.cmake
design/: Drift concept map.mom
design/sand/: Makefile  SANDreport.cls  SplunkConnector.java  appendix.tex  drift.tex  ephemeris.tex  intro.tex  outro.tex  paper.aux  paper.bbl  paper.blg  paper.fdb_latexmk  paper.fls  paper.lof  paper.tex  paper.toc  refs.bib
design/sand/figs/: ep.graffle
design/sand/uml/: Makefile  composite.uml  defining1.uml  defining2.uml  establish.uml  first.uml  partvalue.uml
doc/: CMakeLists.txt  Doxyfile.in
scratch/: Makefile  a.cc  b.cc
src/: CMakeLists.txt  action.cc  action.h  config.h.cmake  control-wraps.cc  control.cc  control.h  driftd.cc  external_part.cc  formats.cc  formats.h  immediate_part.cc  internal.h  kdtree.cc  kdtree.h  part.cc  part.h  pgraph.h  proactive.cc  proactive.h  service.cc  service.h  stx_btree.h  trie.cc  trie.h
tests/: CMakeLists.txt  ping.cc
